--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to my first website</h1>
     <p>Test Website</p>
+    <p>Lion Vs Tiger</p>
+    <p>Jaguar vs Leopard</p>
+    <p>Cheetah vs Puma</p>
 </body>
 </html>
 
